corrects some spacing

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,7 +1,7 @@
 .contact {
   margin-top: 12%;
   background-color: black;
-  padding: 5% 10% 10%;
+  padding: 0% 10% 0% ;
   color: white;
 }
 .cnav-links > a {
@@ -75,6 +75,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 0%;
 }
 .mail{
   color: aqua; display: inline;
