--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 0px;
+    margin: 0;
     font-family: "Poppins", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
@@ -34,7 +34,8 @@ body {
   display: inline-block;
   font-size: xx-large;
   color: black;
-  padding-left: 1rem;
+  padding-top: 0.3rem;
+  padding-left: 0.8rem;
 }
 
 .nav > .nav-btn {
@@ -44,12 +45,12 @@ body {
 .nav > .nav-links {
   display: inline;
   float: right;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .nav > .nav-links > a {
   display: inline-block;
-  padding: 13px 10px 13px 10px;
+  padding: 0.9rem 0.8rem 0.9rem 0.8rem;
   text-decoration: none;
   color: black;
 }
@@ -74,7 +75,7 @@ body {
   }
   .nav > .nav-btn > label {
     display: inline-block;
-    padding:1rem ;
+    padding:0.65rem ;
   }
   
   .nav > .nav-btn > label:hover,
@@ -85,7 +86,7 @@ body {
     display: block;
     width: 25px;
     height: 10px;
-    border-top: 2px solid black;
+    border-top: 0.1rem solid black;
   }
   .nav > .nav-links {
     position: absolute;
